--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 20px;
-            align-items: stretch; /* Stretches cards to same height */
+            align-items: stretch;
         }
 
         /* --- Unified Card Styles --- */
@@ -134,7 +134,7 @@
             position: relative;
             overflow: hidden;
             transition: transform 0.2s, box-shadow 0.2s;
-            min-height: 200px; /* Enforce minimum height for consistency */
+            min-height: 200px;
             border: 1px solid transparent;
         }
 
